--- a/www/css/cadastro.css
+++ b/www/css/cadastro.css
@@ -35,8 +35,7 @@ html,body,h1,h2,h3,h4 {
     max-height: 100%;
     
   }
-
-.loader {
+  .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
   border-top: 16px solid #3498db;
@@ -64,4 +63,7 @@ html,body,h1,h2,h3,h4 {
   height: 120px;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
+}
+.validacao{
+    font-size: x-small;
 }
